# rua-lang

./: .gitignore  .luarc.json  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  vscode-release.yml
crates/rua-analysis/: Cargo.toml
crates/rua-analysis/src/: base.rs  db.rs  lib.rs
crates/rua-analysis/src/db_index/: mod.rs
crates/rua-analysis/src/diagnostic/: mod.rs
crates/rua-analysis/src/hir/: body.rs  cfg.rs  def_map.rs  infer.rs  item_tree.rs  member.rs  mod.rs  module_resolution.rs  scope.rs  std_library.rs  ty.rs
crates/rua-analysis/src/ide/: closure_iterator.rs  completion.rs  contract.rs  mod.rs  symbol.rs
crates/rua-analysis/src/semantic/: mod.rs  reference_index.rs
crates/rua-analysis/src/vfs/: mod.rs
crates/rua-analysis/tests/: annotation_ide.rs  body_model.rs  closure_iterator_ide.rs  definition_model.rs  ide_contract.rs  inference.rs  iterator_type_parity.rs  local_resolution.rs  member_inference.rs  migration_baseline.rs  parity.rs  pattern_narrowing.rs
crates/rua-analysis/tests/support/: migration.rs
crates/rua-core/: Cargo.toml
crates/rua-core/builtins/: hashmap.ruai  iter.ruai  option.ruai  result.ruai  string.ruai  vec.ruai
crates/rua-core/src/: lib.rs
crates/rua-lex/: Cargo.toml
crates/rua-lex/src/: lib.rs
crates/rua-lsp/: Cargo.toml
crates/rua-lsp/src/: analysis_inputs.rs  fmt.rs  lsp.rs  worker.rs
crates/rua-lsp/src/lsp/: conversion.rs  filesystem.rs  notifications.rs  protocol.rs  requests.rs  state.rs
crates/rua-lsp/tests/: call_hierarchy.rs  code_actions.rs  code_lens.rs  completion_contexts.rs  completion_resolve.rs  completions.rs  diagnostics.rs  document_highlight.rs  document_links.rs  document_symbols.rs  folding_hover_ext.rs  folding_ranges.rs  formatting.rs  goto_implementation.rs  hover.rs  incremental.rs  incremental_stress.rs  inlay_hints.rs  inlay_hints_ext.rs  on_type_formatting.rs  protocol_lifecycle.rs  references_rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  stress.rs  type_hierarchy.rs  workspace_symbol.rs
crates/rua-lsp/tests/support/: mod.rs
crates/rua-project/: Cargo.toml
crates/rua-project/src/: lib.rs
crates/rua-resources/: Cargo.toml
crates/rua-resources/resources/std/: annotations.ruai  fmt.ruai  hashmap.ruai  iter.ruai  option.ruai  result.ruai  rua_std.lua  std.toml  string.ruai  vec.ruai
crates/rua-resources/src/: lib.rs
crates/rua-syntax/: Cargo.toml
crates/rua-syntax/src/: analysis.rs  ast.rs  completion.rs  kind.rs  lexer.rs  lib.rs  line_index.rs  nameres.rs  parser.rs  symbols.rs  text.rs  transition.rs  workspace.rs
crates/rua-syntax/src/format/: comment.rs  doc.rs  lower.rs  mod.rs
crates/rua-syntax/tests/: adversarial.rs  conformance.rs  format.rs  formatter_goldens.rs  goldens.rs  ide_goldens.rs  parser.rs  parser_goldens.rs  range_conformance.rs  ruai_goldens.rs
crates/rua-syntax/tests/goldens/: example_rua.rua.golden  example_rua_p2.rua.golden  example_rua_p3.rua.golden  example_rua_p4.rua.golden  example_rua_p4b.rua.golden  example_rua_p4c_types.rua.golden  example_rua_p5.rua.golden  example_rua_std.rua.golden
crates/ruac/: Cargo.toml
crates/ruac/builtins/: hashmap.ruai  iter.ruai  option.ruai  result.ruai  string.ruai  vec.ruai
crates/ruac/src/: annotations.rs  artifact.rs  ast.rs  attributes.rs  backend_layout.rs  check.rs  codegen.rs  diag.rs  hir.rs  lexer.rs  lib.rs  lua_ir.rs  main.rs  parser.rs  reader.rs  resolve.rs  stacktrace.rs  tests.rs  token.rs  tokenize.rs  typeck.rs  typed_ir.rs
crates/ruac/src/builtins/: mod.rs
crates/ruac/tests/: annotations.rs  golden.rs  modules_output.rs  runtime.rs  sysroot.rs
docs/: README.md  code-review-2025-07-12.md  code-review-2026-07-12-REVERIFIED.md  code-review-2026-07-12.md  construction-2026-07-12.md  rua-analysis-lsp-migration-plan.md  rua-annotations.md  rua-architecture.md  rua-artifact.md  rua-attributes.md  rua-closure-iterator-rfc.md  rua-construction-plan.md  rua-design.md  rua-golden-cases.md  rua-ide-architecture.md  rua-lsp-features.md  rua-lsp-v3b.md  rua-lsp-v3c.md  rua-sourcemap.md  rua-stacktrace.md  rua-test-baseline.md  rua-vs-rust-analyzer-gap-analysis.md
editors/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: rua.tmLanguage.json
lualib/: rua_rt.lua
scripts/: check-boundaries.sh
tests/: demo.lua  demo.rua
tests/fixtures/: README.md
tests/fixtures/examples/: example_rua.rua  example_rua_p2.rua  example_rua_p3.rua  example_rua_p4b.rua  example_rua_p4c.rua  example_rua_p4c_mod.rua  example_rua_p5.rua
tests/golden/: COVERAGE.md  README.md
tests/golden/compile-fail/: arithmetic_mixed_int_string.diag.golden  arithmetic_mixed_int_string.rua  arithmetic_mixed_string_int.diag.golden  arithmetic_mixed_string_int.rua  call_wrong_arity_fn.diag.golden  call_wrong_arity_fn.rua  call_wrong_arity_method.diag.golden  call_wrong_arity_method.rua  call_wrong_type_fn.diag.golden  call_wrong_type_fn.rua  call_wrong_type_method.diag.golden  call_wrong_type_method.rua  enum_unit_called.diag.golden  enum_unit_called.rua  enum_unknown_variant.diag.golden  enum_unknown_variant.rua  enum_wrong_struct_form.diag.golden  enum_wrong_struct_form.rua  enum_wrong_tuple_form.diag.golden  enum_wrong_tuple_form.rua  module_import_private.diag.golden  module_import_private.rua  module_missing_file.diag.golden  module_missing_file.rua  module_private_item_access.diag.golden  module_private_item_access.rua  module_private_submodule_access.diag.golden  module_private_submodule_access.rua  name_duplicate_enum_variant.diag.golden  name_duplicate_enum_variant.rua  name_duplicate_fn.diag.golden  name_duplicate_fn.rua  name_duplicate_module_fn.diag.golden  name_duplicate_module_fn.rua  name_duplicate_struct_field.diag.golden  name_duplicate_struct_field.rua  option_some_wrong_arity.diag.golden  option_some_wrong_arity.rua  parse_bad_generic_list.diag.golden  (+61 more)
tests/moon_external/: .ruarc.toml  README.md  main.rua
(+312 files in other folders)
