[package]
name = "rua-lsp"
version = "0.1.0"
edition = "2024"
description = "Rua LSP server and formatter CLI."

[features]
default = []
# The LSP binary pulls in lsp-server + lsp-types + serde_json. Gate it behind
# a feature so the crate compiles without those deps when only rua-fmt is needed.
lsp = ["dep:lsp-server", "dep:lsp-types", "dep:rua-analysis", "dep:serde_json"]

[dependencies]
rua-analysis = { workspace = true, optional = true }
rua-syntax.workspace = true
ruac.workspace = true
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
serde_json = { version = "1", optional = true }

[[bin]]
name = "rua-fmt"
path = "src/fmt.rs"

[[bin]]
name = "rua-lsp"
path = "src/lsp.rs"
required-features = ["lsp"]
