[package]
name = "rua-lsp"
version = "0.1.1"
edition = "2024"
description = "Rua LSP server and formatter CLI."

[features]
default = []
# The LSP binary pulls in lsp-server + lsp-types + serde_json. Gate it behind
# a feature so the crate compiles without those deps when only rua-fmt is needed.
lsp = ["dep:crossbeam-channel", "dep:ignore", "dep:lsp-server", "dep:lsp-types", "dep:rua-analysis", "dep:rua-project", "dep:rua-resources", "dep:serde_json", "dep:url"]

[dependencies]
rua-analysis = { workspace = true, optional = true }
rua-project = { workspace = true, optional = true }
rua-resources = { workspace = true, optional = true }
rua-syntax = { path = "../rua-syntax", default-features = false }
rowan = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
ignore = { workspace = true, optional = true }
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
serde_json = { version = "1", optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
rua-analysis = { workspace = true }
lsp-types = { version = "0.97" }
serde_json = { version = "1" }

[[bin]]
name = "rua-fmt"
path = "src/fmt.rs"

[[bin]]
name = "rua-lsp"
path = "src/lsp.rs"
required-features = ["lsp"]
