[package]
name = "rua-syntax"
version = "0.1.0"
edition = "2024"
description = "Lossless rowan CST for Rua, with the IDE/LSP-facing syntax tree, formatter, AstNode views, and LineIndex."

[lib]
name = "rua_syntax"
path = "src/lib.rs"
doctest = false

[dependencies]
rowan.workspace = true
# Phase 1/5 transition-only bridge; all production access is isolated in
# `src/transition.rs`, which documents the removal plan.
ruac.workspace = true
