[package]
name = "rua-syntax"
version = "0.1.0"
edition = "2024"
description = "Lossless rowan CST for Rua, with the IDE/LSP-facing syntax tree, formatter, AstNode views, and LineIndex."

[lib]
name = "rua_syntax"
path = "src/lib.rs"
doctest = false

[features]
default = ["legacy"]
# The legacy feature gates analysis, workspace, nameres, completion, and
# transition modules that use the compiler bridge. These only survive for
# integration tests; production consumers should opt out with
# `default-features = false`.
legacy = ["dep:ruac"]

[dependencies]
rowan.workspace = true
ruac = { workspace = true, optional = true }
