[package]
name = "rua-syntax"
version = "0.1.0"
edition = "2024"
description = "Lossless rowan CST for Rua, with the IDE/LSP-facing syntax tree, formatter, AstNode views, and LineIndex."

[lib]
name = "rua_syntax"
path = "src/lib.rs"
doctest = false

[dependencies]
rua-core.workspace = true
rua-lex.workspace = true
rowan.workspace = true

[dev-dependencies]
proptest = "1"
ruac.workspace = true
