[package]
name = "ruac"
version = "0.1.1"
edition = "2024"
description = "Rua compiler: a Rust-syntax subset language that transpiles to readable Lua 5.5 source."

[[bin]]
name = "ruac"
path = "src/main.rs"

[lib]
name = "ruac"
path = "src/lib.rs"
doctest = false

[dependencies]
rua-core.workspace = true
rua-lex.workspace = true
rua-project.workspace = true
rua-resources.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
